tests/NormalTests/paczka1/fuzzy1/90562012.err
Error in line 3: ljAmTkCW S915 27,6
Error in line 4: ljAmTkCW A308 54,9
Error in line 6: mUddVq0 A308 22,4
Error in line 5: ljAmTkCW S915 8,2
Error in line 13: WVK8JwDX1Cc S540 70,5
Error in line 8: ljAmTkCW S540 22,7
Error in line 24: Ehy6MB2DBU S915 8,55
Error in line 18: WVK8JwDX1Cc A308 69,3
Error in line 26: WVK8JwDX1Cc S540 52,0
Error in line 11: A992 S915 36,5
Error in line 28: mbuvnd S540 52,5
